Segmentation fault when selecting context.area.type before applying operator (scripting) #54468

Closed
opened 2018-03-30 21:48:04 +02:00 by Martin Rünz · 10 comments

System Information
OS: Ubuntu 16.04.4 LTS
HW: Dell XPS 9550 notebook, using Intel HD GPU (nvidia deactivted)

Blender Version
Broken: 2.83

Short description of error
Executing the operator bpy.ops.transform.translate causes a crash if bpy.context.area.type is set manually before.
Crash in setTransformViewMatrices because t->ar->regiondata is NULL

Exact steps for others to reproduce the error
Running the following script causes the crash:

import bpy
import bmesh

# Create object
bpy.ops.mesh.primitive_plane_add(size=1, enter_editmode=False, location=(0, 0, 0))

# Enter edit mode
bpy.context.area.type = 'VIEW_3D' # If this is not set, crash does not occur
bpy.ops.object.mode_set(mode='EDIT', toggle=False)

# Modify vertices
mesh = bmesh.from_edit_mesh(bpy.context.active_object.data)
mesh.verts.ensure_lookup_table()
mesh.verts[0].select = True

# Next call causes crash:
bpy.ops.transform.translate(value=(0, 0, 1), constraint_axis=(False, False, True),
                            mirror=False, use_proportional_edit=True,
                            proportional_edit_falloff='SHARP')
**System Information** OS: Ubuntu 16.04.4 LTS HW: Dell XPS 9550 notebook, using Intel HD GPU (nvidia deactivted) **Blender Version** Broken: 2.83 **Short description of error** Executing the operator `bpy.ops.transform.translate` causes a crash if `bpy.context.area.type` is set manually before. Crash in `setTransformViewMatrices` because `t->ar->regiondata` is `NULL` **Exact steps for others to reproduce the error** Running the following script causes the crash: ``` import bpy import bmesh # Create object bpy.ops.mesh.primitive_plane_add(size=1, enter_editmode=False, location=(0, 0, 0)) # Enter edit mode bpy.context.area.type = 'VIEW_3D' # If this is not set, crash does not occur bpy.ops.object.mode_set(mode='EDIT', toggle=False) # Modify vertices mesh = bmesh.from_edit_mesh(bpy.context.active_object.data) mesh.verts.ensure_lookup_table() mesh.verts[0].select = True # Next call causes crash: bpy.ops.transform.translate(value=(0, 0, 1), constraint_axis=(False, False, True), mirror=False, use_proportional_edit=True, proportional_edit_falloff='SHARP') ```
Author

Added subscriber: @martin.ruenz

Added subscriber: @martin.ruenz
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

I think what you want to do is override the context and pass that to the operator

import bpy
import bmesh

# Create object
bpy.ops.mesh.primitive_plane_add(radius=1, view_align=False, enter_editmode=False, location=(0, 0, 0), layers=(True, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False))

# Enter edit mode
bpy.ops.object.mode_set(mode='EDIT', toggle=False)

# Modify vertices
mesh = bmesh.from_edit_mesh(bpy.context.active_object.data)
mesh.verts.ensure_lookup_table()
mesh.verts[0].select = True

# Override context
win      = bpy.context.window
scr      = win.screen
areas3d  = [area for area in scr.areas if area.type == 'VIEW_3D']
region   = [region for region in areas3d[0].regions if region.type == 'WINDOW']
override = {'window':win,
            'screen':scr,
            'area'  :areas3d[0],
            'region':region[0],
            'scene' :bpy.context.scene,
            }

# call with override context:
bpy.ops.transform.translate(override, value=(0, 0, 1), constraint_axis=(False, False, True),
                            constraint_orientation='GLOBAL', mirror=False, proportional='ENABLED',
                            proportional_edit_falloff='SHARP')

see API reference

having a look at the crash later...

I think what you want to do is override the context and pass that to the operator ``` import bpy import bmesh # Create object bpy.ops.mesh.primitive_plane_add(radius=1, view_align=False, enter_editmode=False, location=(0, 0, 0), layers=(True, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False)) # Enter edit mode bpy.ops.object.mode_set(mode='EDIT', toggle=False) # Modify vertices mesh = bmesh.from_edit_mesh(bpy.context.active_object.data) mesh.verts.ensure_lookup_table() mesh.verts[0].select = True # Override context win = bpy.context.window scr = win.screen areas3d = [area for area in scr.areas if area.type == 'VIEW_3D'] region = [region for region in areas3d[0].regions if region.type == 'WINDOW'] override = {'window':win, 'screen':scr, 'area' :areas3d[0], 'region':region[0], 'scene' :bpy.context.scene, } # call with override context: bpy.ops.transform.translate(override, value=(0, 0, 1), constraint_axis=(False, False, True), constraint_orientation='GLOBAL', mirror=False, proportional='ENABLED', proportional_edit_falloff='SHARP') ``` see [API reference ](https://docs.blender.org/api/blender_python_api_current/bpy.ops.html#overriding-context) having a look at the crash later...

Added subscriber: @ZedDB

Added subscriber: @ZedDB

@lichtwerk still planning to look into this?

@lichtwerk still planning to look into this?
Campbell Barton was assigned by Sebastian Parborg 2019-03-31 21:50:22 +02:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x00007fffeba89c17 in ?? () from /lib64/libc.so.6
(gdb) bt
- 0  0x00007fffeba89c17 in ?? () from /lib64/libc.so.6
- 1  0x00005555592b8755 in copy_m4_m4 (m1=0x7fffbc6a5a2c, m2=0x40) at /home/zed/prog/blender/source/blender/blenlib/intern/math_matrix.c:88
- 2  0x0000555558015a95 in setTransformViewMatrices (t=0x7fffbc6a5708) at /home/zed/prog/blender/source/blender/editors/transform/transform.c:235
- 3  0x00005555580762e9 in initTransInfo (C=0x7fffdc058188, t=0x7fffbc6a5708, op=0x7fffbc5dfec8, event=0x0)
    at /home/zed/prog/blender/source/blender/editors/transform/transform_generics.c:1681
#4  0x000055555801b1ac in initTransform (C=0x7fffdc058188, t=0x7fffbc6a5708, op=0x7fffbc5dfec8, event=0x0, mode=1)
    at /home/zed/prog/blender/source/blender/editors/transform/transform.c:2340
#5  0x0000555558086e01 in transformops_data (C=0x7fffdc058188, op=0x7fffbc5dfec8, event=0x0)
    at /home/zed/prog/blender/source/blender/editors/transform/transform_ops.c:370
- 6  0x0000555558087092 in transform_exec (C=0x7fffdc058188, op=0x7fffbc5dfec8) at /home/zed/prog/blender/source/blender/editors/transform/transform_ops.c:463
- 7  0x0000555557e63e48 in wm_operator_invoke (C=0x7fffdc058188, ot=0x7fffd6dfab88, event=0x0, properties=0x7fffffffcd90, reports=0x7fffb97fabb8,
    poll_only=false, use_last_properties=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1353
#8  0x0000555557e6464b in wm_operator_call_internal (C=0x7fffdc058188, ot=0x7fffd6dfab88, properties=0x7fffffffcd90, reports=0x7fffb97fabb8, context=6,
    poll_only=false, event=0x0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1586
#9  0x0000555557e64899 in WM_operator_call_py (C=0x7fffdc058188, ot=0x7fffd6dfab88, context=6, properties=0x7fffffffcd90, reports=0x7fffb97fabb8,
    is_undo=false) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1664
#10 0x00005555585af25d in pyop_call (UNUSED_self=<module at remote 0x7fffd7068688>, args=Python Exception <class 'gdb.error'> No type named PyUnicodeObject.:
)
   
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x00007fffeba89c17 in ?? () from /lib64/libc.so.6 (gdb) bt - 0 0x00007fffeba89c17 in ?? () from /lib64/libc.so.6 - 1 0x00005555592b8755 in copy_m4_m4 (m1=0x7fffbc6a5a2c, m2=0x40) at /home/zed/prog/blender/source/blender/blenlib/intern/math_matrix.c:88 - 2 0x0000555558015a95 in setTransformViewMatrices (t=0x7fffbc6a5708) at /home/zed/prog/blender/source/blender/editors/transform/transform.c:235 - 3 0x00005555580762e9 in initTransInfo (C=0x7fffdc058188, t=0x7fffbc6a5708, op=0x7fffbc5dfec8, event=0x0) at /home/zed/prog/blender/source/blender/editors/transform/transform_generics.c:1681 #4 0x000055555801b1ac in initTransform (C=0x7fffdc058188, t=0x7fffbc6a5708, op=0x7fffbc5dfec8, event=0x0, mode=1) at /home/zed/prog/blender/source/blender/editors/transform/transform.c:2340 #5 0x0000555558086e01 in transformops_data (C=0x7fffdc058188, op=0x7fffbc5dfec8, event=0x0) at /home/zed/prog/blender/source/blender/editors/transform/transform_ops.c:370 - 6 0x0000555558087092 in transform_exec (C=0x7fffdc058188, op=0x7fffbc5dfec8) at /home/zed/prog/blender/source/blender/editors/transform/transform_ops.c:463 - 7 0x0000555557e63e48 in wm_operator_invoke (C=0x7fffdc058188, ot=0x7fffd6dfab88, event=0x0, properties=0x7fffffffcd90, reports=0x7fffb97fabb8, poll_only=false, use_last_properties=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1353 #8 0x0000555557e6464b in wm_operator_call_internal (C=0x7fffdc058188, ot=0x7fffd6dfab88, properties=0x7fffffffcd90, reports=0x7fffb97fabb8, context=6, poll_only=false, event=0x0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1586 #9 0x0000555557e64899 in WM_operator_call_py (C=0x7fffdc058188, ot=0x7fffd6dfab88, context=6, properties=0x7fffffffcd90, reports=0x7fffb97fabb8, is_undo=false) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1664 #10 0x00005555585af25d in pyop_call (UNUSED_self=<module at remote 0x7fffd7068688>, args=Python Exception <class 'gdb.error'> No type named PyUnicodeObject.: ) ```
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 16:36:17 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm, but it seems like a bad assumption that the ar->regiondata with all matrices will be immediately calculated on this line:
bpy.context.area.type = 'VIEW_3D'

Anyway, this crash does not seem to be justified.
Any operator called in python should check for these possible erros.

I can confirm, but it seems like a bad assumption that the `ar->regiondata` with all matrices will be immediately calculated on this line: ```bpy.context.area.type = 'VIEW_3D'``` Anyway, this crash does not seem to be justified. Any operator called in python should check for these possible erros.
Philipp Oeser removed the
Interest
Python API
label 2023-02-10 09:04:52 +01:00
Member

Still crashing in current main.

I think if we run into NULL ARegion regiondata [which happens if we just set bpy.context.area.type without further actions], we can make transform operators gracefully work just by using t->spacetype = SPACE_EMPTY in initTransInfo.

Similar check is already done in ba229e3859.

Will put up a PR for this.

Still crashing in current main. I think if we run into NULL `ARegion` `regiondata` [which happens if we just set `bpy.context.area.type` without further actions], we can make transform operators gracefully work just by using `t->spacetype = SPACE_EMPTY` in `initTransInfo`. Similar check is already done in ba229e38597c. Will put up a PR for this.
Philipp Oeser self-assigned this 2024-03-08 13:54:04 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-11 09:27:49 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54468
No description provided.