Fix #54468: crash calling transform operators with incomplete regiondata

If we run into NULL `RegionView3D` `regiondata` [which e.g. happens if
we just set `bpy.context.area.type = 'VIEW_3D'` without further actions
in the text editor prior to calling the transform operator], we can make
it gracefully work just by using `t->spacetype = SPACE_EMPTY` in
`initTransInfo`.

Similar check is already done in ba229e38597c (marked /* running in the
text editor */).

Transform code is smart enough to have fallback code in place that sets
matrices etc.